fixed dark mode bug in compare view

--- a/docs/scss/custom.scss
+++ b/docs/scss/custom.scss
@@ -265,7 +265,7 @@ body.dark {
         background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E") !important;
     }
 
-    body.toolbar-side #toolbar {
+    #toolbar.side {
         background: #323232;
         color: #ccc;
     }
